# RAG_learning

./: README.md  report.md
python_doc_rag/: .gitignore  main.ipynb  main.py
python_doc_rag/v1/: python_3_13_changes.txt
python_doc_rag/v2/: README.md  constants.py
python_doc_rag/v2/backend/: constants.py  main.py  prompt.py  rag.py
python_doc_rag/v2/frontend/: main.py
python_doc_rag/v2/frontend/pages/: about.py
python_doc_rag/v3/: README.md
python_doc_rag/v3/backend/: llm.py  main.py  rag.py  retrieval_chains.py  vector_store.py
python_doc_rag/v3/frontend/: main.py
python_doc_rag/v4/: README.md  constants.py
python_doc_rag/v4/backend/: main.py  rag.py  retrieval_chains.py  vector_store.py
python_doc_rag/v4/backend/faiss_index/: index.pkl
python_doc_rag/v4/frontend/: main.py
python_doc_rag/v5/: README.md  constants.py  logger.py
python_doc_rag/v5/backend/: bm25_index.pkl  helpers.py  llm.py  main.py  rag.py  retrieval_chains.py  vector_store.py
python_doc_rag/v5/backend/chat_history/: chats.db
python_doc_rag/v5/backend/faiss_index/: index.pkl
python_doc_rag/v5/frontend/: main.py
sql_agent/: .env.sample  README.md  pyproject.toml  requirements.txt
sql_agent/src/sql_agent/: company.db  crew.py  main.py  report.md
sql_agent/src/sql_agent/config/: agents.yaml  tasks.yaml
sql_agent/src/sql_agent/tools/: custom_tool.py  nl2sql_tool.py
