[project]
name = "sql_agent"
version = "0.1.0"
description = "sql_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
sql_agent = "sql_agent.main:run"
run_crew = "sql_agent.main:run"
train = "sql_agent.main:train"
replay = "sql_agent.main:replay"
test = "sql_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
